Fix card icon border radius on small screens

--- a/src/runtime/components/plugin-card.scss
+++ b/src/runtime/components/plugin-card.scss
@@ -27,6 +27,7 @@
 		.card-img-top {
 			border-top-right-radius: 0;
 			border-bottom-right-radius: 0;
+			border-bottom-left-radius: var(--bs-card-border-radius);
 			width: 80px;
 			height: 100%;
 			max-height: 100%;
